--- a/ramdisk/ueventd.samsungexynos7870.rc
+++ b/ramdisk/ueventd.samsungexynos7870.rc
@@ -60,14 +60,16 @@
 
 # mfc
 /dev/video6               0660   mediacodec      mediadrm
-/dev/video7               0660   mediacodec mediadrm
-/dev/video8               0660   mediacodec mediadrm
-/dev/video9               0660   mediacodec mediadrm
+/dev/video7               0660   media      mediadrm
+/dev/video8               0660   media      mediadrm
+/dev/video9               0660   media      mediadrm
 
 # camera
 /dev/video100             0660   cameraserver      cameraserver
 /dev/video101             0660   cameraserver      cameraserver
 /dev/video102             0660   cameraserver      cameraserver
+/dev/video103             0660   cameraserver      cameraserver
+/dev/video104             0660   cameraserver      cameraserver
 /dev/video109             0660   cameraserver      cameraserver
 /dev/video110             0660   cameraserver      cameraserver
 /dev/video111             0660   cameraserver      cameraserver
@@ -85,18 +87,11 @@
 /dev/video151             0660   cameraserver      cameraserver
 /dev/video152             0660   cameraserver      cameraserver
 /dev/video160             0660   cameraserver      cameraserver
-/dev/video161             0660   cameraserver      cameraserver
-/dev/video170             0660   cameraserver      cameraserver
-/dev/video171             0660   cameraserver      cameraserver
-/dev/video172             0660   cameraserver      cameraserver
-/dev/video173             0660   cameraserver      cameraserver
-/dev/video174             0660   cameraserver      cameraserver
-/dev/video180             0660   cameraserver      cameraserver
 /dev/media2               0660   media      media
 
 # hevc
-/dev/video10              0660   mediacodec mediadrm
-/dev/video11              0660   mediacodec mediadrm
+/dev/video10              0660   media      media
+/dev/video11              0660   media      media
 
 # jpeg
 /dev/video12              0660   cameraserver      media
@@ -121,21 +116,43 @@
 # SIPC RIL
 /dev/umts_boot0           0666   radio      radio
 /dev/umts_ipc0            0660   radio      radio
+/dev/umts_ipc1            0660   radio      radio
 /dev/umts_rfs0            0660   radio      radio
 
 # Modem Interface
 /dev/block/platform/13540000.dwmmc0/by-name/RADIO	0660	system	radio
 /dev/block/platform/13540000.dwmmc0/by-name/CP_DEBUG	0660	radio	system
-### FIXME: this is needed by GPS
 /dev/umts*		  0666	system	radio
-### FIXME END
 /dev/umts_csd		  0660	system	loop_radio
 /dev/smd4                 0660  system  radio
 
+# interactive governor parameters
+/sys/devices/system/cpu/cpu*   cpufreq/interactive/timer_rate                  0660    system  system
+/sys/devices/system/cpu/cpu*   cpufreq/interactive/timer_slack                 0660    system  system
+/sys/devices/system/cpu/cpu*   cpufreq/interactive/min_sample_time             0660    system  system
+/sys/devices/system/cpu/cpu*   cpufreq/interactive/hispeed_freq                0660    system  system
+/sys/devices/system/cpu/cpu*   cpufreq/interactive/target_loads                0660    system  system
+/sys/devices/system/cpu/cpu*   cpufreq/interactive/go_hispeed_load             0660    system  system
+/sys/devices/system/cpu/cpu*   cpufreq/interactive/above_hispeed_delay         0660    system  system
+/sys/devices/system/cpu/cpu*   cpufreq/interactive/boost                       0660    system  system
+/sys/devices/system/cpu/cpu*   cpufreq/interactive/boostpulse                  0200    system  system
+/sys/devices/system/cpu/cpu*   cpufreq/interactive/input_boost                 0660    system  system
+/sys/devices/system/cpu/cpu*   cpufreq/interactive/boostpulse_duration         0660    system  system
+/sys/devices/system/cpu/cpu*   cpufreq/interactive/io_is_busy                  0660    system  system
+
+# sensor sysfs properties
+/sys/devices/virtual/input/input*	poll_delay	0660	system	radio
+/sys/devices/virtual/input/input*	enable		0660	system	radio
+
+# Sensorhub IIO
+/dev/ssp_sensorhub        0660   system		system
+/dev/iio:device*          0660   system		system
+/sys/devices/13930000.spi/spi_master/spi2/spi2.0/iio:device*    buffer/enable       0660    system    system
+/sys/devices/13930000.spi/spi_master/spi2/spi2.0/iio:device*    buffer/length       0660    system    system
+/sys/bus/iio/devices/iio:device*    0664   system     radio
+
 # Google FRP solution
 /dev/block/platform/13540000.dwmmc0/by-name/PERSISTENT    0660    system    system
-
-# Reactivation Lock solution
 /dev/block/platform/13540000.dwmmc0/by-name/STEADY    0660    system    system
 
 # from Samsungueventd.rc
@@ -154,14 +171,3 @@
 # Fingerprint Sensor
 /dev/vfsspi        0660   system     system
 /dev/esfp0        0660   system     system
-
-# sensor sysfs properties
-/sys/devices/virtual/input/input*	poll_delay	0660	system	radio
-/sys/devices/virtual/input/input*	enable		0660	system	radio
-
-# Sensorhub IIO
-/dev/ssp_sensorhub        0660   system		system
-/dev/iio:device*          0660   system		system
-/sys/devices/13930000.spi/spi_master/spi2/spi2.0/iio:device*    buffer/enable       0660    system    system
-/sys/devices/13930000.spi/spi_master/spi2/spi2.0/iio:device*    buffer/length       0660    system    system
-/sys/bus/iio/devices/iio:device*    0664   system     radio
