--- a/ramdisk/init.samsungexynos7870.rc
+++ b/ramdisk/init.samsungexynos7870.rc
@@ -40,11 +40,9 @@ on post-fs-data
     chown system system /data/privatemode
     restorecon /data/privatemode
 
-#GPS
-    chown root system /dev/ttySAC1
-    chmod 0660 /dev/ttySAC1
-    chown root system /sys/class/sec/gps/GPS_PWR_EN/value
-    chmod 0664 /sys/class/sec/gps/GPS_PWR_EN/value
+# Permissions for gnss
+    chmod 0660 /dev/gnss_ipc
+    chown system system /dev/gnss_ipc
     mkdir /data/system 0771 system system
     chown system system /data/system
     mkdir /data/system/gps 0771 system system
@@ -150,15 +148,6 @@ on boot
     chmod 0660 /sys/devices/system/cpu/cpu0/cpufreq/interactive/boostpulse_duration
     chown system system /sys/devices/system/cpu/cpu0/cpufreq/interactive/io_is_busy
     chmod 0660 /sys/devices/system/cpu/cpu0/cpufreq/interactive/io_is_busy
-
-    # Assume HMP uses shared cpufreq policy for all LITTLE CPUs
-    chown system system /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq
-    chmod 0660 /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq
-
-    chown system system sys/devices/system/cpu/cpufreq/mp-cpufreq/cluster0_max_freq
-    chmod 0660 sys/devices/system/cpu/cpufreq/mp-cpufreq/cluster0_max_freq
-    chown system system sys/devices/system/cpu/cpufreq/mp-cpufreq/boot_low_freq
-    chmod 0660 sys/devices/system/cpu/cpufreq/mp-cpufreq/boot_low_freq
 
     chown system system /sys/devices/system/cpu/cpu4/cpufreq/interactive/timer_rate
     chmod 0660 /sys/devices/system/cpu/cpu4/cpufreq/interactive/timer_rate
@@ -772,12 +761,11 @@ service argos-daemon /system/bin/argosd
     group system radio
 	
 # GPS
-service gpsd /system/bin/gpsd -c /system/etc/gps.xml
+service gpsd /system/bin/gpsd
     class main
     user gps
-    group system inet net_raw wakelock
+    group system inet wakelock
     ioprio be 0
-    seclabel u:r:gpsd:s0
 
 # LPM
 service lpm /system/bin/lpm
@@ -821,6 +809,7 @@ service rpmbd /system/bin/rpmbd
      class main
 
 on property:sys.mobicoredaemon.enable=true
+    start cs_service
     write /proc/iccc_ready 1
 
 on property:ro.multisim.simslotcount=1
@@ -829,19 +818,11 @@ on property:ro.multisim.simslotcount=1
 on property:ro.multisim.simslotcount=2
     setprop persist.radio.multisim.config dsds
 
-# deferred initcall
-#service sec-sh /system/bin/sh /system/etc/init.sec.boot.sh
+# Modem boot daemon
+#    service cpboot-daemon /system/bin/cbd -d
 #    class main
 #    user root
-#    oneshot
-
-# Modem boot daemon
-service wifi-daemon /sbin/cbd -tmodap_ap -bm -mm -P platform/13540000.dwmmc0/by-name/RADIO
-    class main
-    user root
-    group radio cache inet misc audio sdcard_rw log sdcard_r shell
-    seclabel u:r:cbd:s0
-    oneshot
+#    group radio cache inet misc audio sdcard_rw log
 
 # DM daemon
 #    service DM-daemon /system/bin/dmd
@@ -850,10 +831,10 @@ service wifi-daemon /sbin/cbd -tmodap_ap -bm -mm -P platform/13540000.dwmmc0/by-
 #    group system
 
 # FINGERPRINT FRAMEWORK : starts fingerprintd
-#service fingerprintd /system/bin/fingerprintd
-#    class late_start
-#    user system
-#    group system
+service fingerprintd /system/bin/fingerprintd
+    class late_start
+    user system
+    group system
 
 # VC daemon
     service VC-daemon /system/bin/vcd
@@ -897,12 +878,12 @@ on property:ro.debuggable=1
     write /sys/module/kgdboc/parameters/kgdboc ttyFIQ1
     write /sys/module/fiq_debugger/parameters/kgdb_enable 1
 
-#service prepare_param /system/bin/prepare_param.sh /dev/block/platform/13540000.dwmmc0/by-name/PARAM
-#    class core
-#    user root
-#    group root
-#    seclabel u:r:prepare_param:s0
-#    oneshot
+service prepare_param /system/bin/prepare_param.sh /dev/block/platform/13540000.dwmmc0/by-name/PARAM
+    class core
+    user root
+    group root
+    seclabel u:r:prepare_param:s0
+    oneshot
 
 # Secure Storage startup
 service secure_storage /system/bin/secure_storage_daemon
@@ -910,10 +891,17 @@ service secure_storage /system/bin/secure_storage_daemon
     user system
     group system
     disabled
+on property:ro.securestorage.knox=true
+    mkdir /dev/.secure_storage
+    chmod 0711 /dev/.secure_storage
+    chown system system /dev/.secure_storage
+    restorecon -R /dev/.secure_storage
+    start secure_storage
 on property:ro.securestorage.support=true
     mkdir /dev/.secure_storage
     chmod 0711 /dev/.secure_storage
     chown system system /dev/.secure_storage
+    restorecon -R /dev/.secure_storage
     start secure_storage
 
 # umount service
@@ -930,7 +918,7 @@ on property:persist.sys.storage_preload=0
     start umount_service
 
 # SSWAP
-service swapon /sbin/sswap -s -f 1536
+service swapon /sbin/sswap -s
     class core
     user root
     group root
