--- a/ramdisk/init.wifi.rc
+++ b/ramdisk/init.wifi.rc
@@ -72,32 +72,27 @@ on boot
     # Pcie WiFi T-put setting
     write /sys/class/net/wlan0/queues/rx-0/rps_cpus 00
 
-    restart p2p_supplicant
+    restart wpa_supplicant
 
-service p2p_supplicant /vendor/bin/hw/wpa_supplicant \
-    -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf \
-    -I/system/etc/wifi/wpa_supplicant_overlay.conf -N \
-    -ip2p0 -Dnl80211 -c/data/misc/wifi/p2p_supplicant.conf \
-    -I/system/etc/wifi/p2p_supplicant_overlay.conf \
-    -puse_p2p_group_interface=1 -e/data/misc/wifi/entropy.bin \
-    -g@android:wpa_wlan0
-    #   we will start as root and wpa_supplicant will switch to user wifi
-    #   after setting up the capabilities required for WEXT
-    #   user wifi
-    #   group wifi inet keystore
-    class main
-    socket wpa_wlan0 dgram 660 wifi wifi
-    disabled
-    oneshot
+#service p2p_supplicant /vendor/bin/hw/wpa_supplicant \
+#        -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf \
+#        -I/system/etc/wifi/wpa_supplicant_overlay.conf -N \
+#        -ip2p0 -Dnl80211 -c/data/misc/wifi/p2p_supplicant.conf \
+#        -I/system/etc/wifi/p2p_supplicant_overlay.conf \
+#        -puse_p2p_group_interface=1 -e/data/misc/wifi/entropy.bin \
+#        -g@android:wpa_wlan0
+#    class main
+#    socket wpa_wlan0 dgram 660 wifi wifi
+#    disabled
+#    oneshot
 
 service wpa_supplicant /vendor/bin/hw/wpa_supplicant \
-    -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf \
-    -I/system/etc/wifi/wpa_supplicant_overlay.conf \
-    -e/data/misc/wifi/entropy.bin -g@android:wpa_wlan0
-    #   we will start as root and wpa_supplicant will switch to user wifi
-    #   after setting up the capabilities required for WEXT
-    #   user wifi
-    #   group wifi inet keystore
+        -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf \
+        -I/system/etc/wifi/wpa_supplicant_overlay.conf \
+        -O/data/misc/wifi/sockets \
+        -m/data/misc/wifi/p2p_supplicant.conf \
+        -puse_p2p_group_interface=1 \
+        -e/data/misc/wifi/entropy.bin -g@android:wpa_wlan0
     class main
     socket wpa_wlan0 dgram 660 wifi wifi
     disabled
@@ -128,9 +123,9 @@ on property:init.svc.macloader=stopped
     chmod 0664 /data/.rev
 # end of WiFi MFG (TestMode)
 
-#service hostapd /vendor/bin/hostapd -dddd /data/hostapd/hostapd.conf
-#    class late_start
-#    user root
-#    group root
-#    oneshot
-#    disabled
+service hostapd /vendor/bin/hostapd -dddd /data/hostapd/hostapd.conf
+    class late_start
+    user root
+    group root
+    oneshot
+    disabled
