--- a/ramdisk/init.rilchip.rc
+++ b/ramdisk/init.rilchip.rc
@@ -4,23 +4,16 @@
 # This is a common source of Android security bugs.
 #
 
+#service ril-daemon /vendor/bin/hw/rild -c 1 -l /system/lib/libsec-ril.so
+
 service ril-daemon /vendor/bin/hw/rild
     class main
     socket rild stream 660 root radio
     socket sap_uim_socket1 stream 660 bluetooth bluetooth
     socket rild-debug stream 660 radio system
-    user root
-    group radio cache inet misc audio sdcard_r sdcard_rw log vpn system readproc
-    onrestart restart cpboot-daemon
-
-service ril-daemon1 /vendor/bin/hw/rild -c 2
-    class main
-    socket rild2 stream 660 root radio
-    socket rild-debug2 stream 660 radio system
-    user root
-    group radio cache inet misc audio sdcard_r sdcard_rw log vpn system readproc
-    disabled
-    onrestart restart cpboot-daemon
+    user radio
+    group radio cache inet misc audio log readproc wakelock
+    capabilities BLOCK_SUSPEND NET_ADMIN NET_RAW
 
 on property:persist.sys.cpboot=disable
     stop ril-daemon
