--- a/ramdisk/init.samsungexynos7870.rc
+++ b/ramdisk/init.samsungexynos7870.rc
@@ -792,9 +792,8 @@ on property:ro.bootmode=charger
 on property:ro.bootmode=charger
    class_start sec-charger
 
-service battery_charger /sbin/healthd -c
+service charger /charger
     class charger
-    critical
     seclabel u:r:healthd:s0
 
 # Bluetooth
