--- a/ramdisk/init.samsungexynos7870.rc
+++ b/ramdisk/init.samsungexynos7870.rc
@@ -12,7 +12,7 @@ on early-init
     mount debugfs /sys/kernel/debug /sys/kernel/debug
 
 on init
-    export LD_SHIM_LIBS "/system/lib/libsec-ril.so|/system/vendor/lib/libprotobuf-cpp-shim.so:/system/lib/libexynoscamera.so|/system/vendor/lib/libcamhelpr.so"
+    export LD_SHIM_LIBS "/system/lib/libexynoscamera.so|/system/vendor/lib/libcamhelpr.so"
 
     start watchdogd
 
