--- a/ramdisk/init.rilchip.rc
+++ b/ramdisk/init.rilchip.rc
@@ -4,14 +4,12 @@
 # This is a common source of Android security bugs.
 #
 
-#service ril-daemon /vendor/bin/hw/rild -c 1 -l /system/lib/libsec-ril.so
-
-service ril-daemon /vendor/bin/hw/rild
+service ril-daemon /vendor/bin/hw/rild -c 1 -l /system/lib/libsec-ril.so
     class main
     socket rild stream 660 root radio
     socket sap_uim_socket1 stream 660 bluetooth bluetooth
     socket rild-debug stream 660 radio system
-    user radio
+    user root
     group radio cache inet misc audio log readproc wakelock
     capabilities BLOCK_SUSPEND NET_ADMIN NET_RAW
 
