--- a/ramdisk/init.samsungexynos7870.rc
+++ b/ramdisk/init.samsungexynos7870.rc
@@ -12,7 +12,7 @@ on early-init
     mount debugfs /sys/kernel/debug /sys/kernel/debug
 
 on init
-    export LD_SHIM_LIBS "/system/lib/libexynoscamera.so|/system/vendor/lib/libcamhelpr.so"
+    export LD_SHIM_LIBS /system/lib/libexynoscamera.so|/vendor/lib/libexynoscamera_shim.so:/system/lib/hw/camera.universal7870.so|/vendor/lib/libshim_camera.so
 
     start watchdogd
 
@@ -182,7 +182,7 @@ on boot
     chown system system /sys/devices/system/cpu/cpu4/cpufreq/interactive/io_is_busy
     chmod 0660 /sys/devices/system/cpu/cpu4/cpufreq/interactive/io_is_busy
 
-    chown bluetooth net_bt /dev/ttySAC0
+    chown bluetooth bluetooth /dev/ttySAC0
     chmod 0660 /dev/ttySAC0
 
 # sem_daemon permission
@@ -770,11 +770,11 @@ service argos-daemon /system/bin/argosd
     group system radio
 	
 # GPS
-#service gpsd /system/bin/gpsd
-#    class main
-#    user gps
-#    group system inet wakelock
-#    ioprio be 0
+service gpsd /system/bin/gpsd
+    class main
+    user gps
+    group system inet wakelock
+    ioprio be 0
 
 # LPM
 service lpm /system/bin/lpm
