--- a/ramdisk/init.samsung.rc
+++ b/ramdisk/init.samsung.rc
@@ -198,7 +198,9 @@ on post-fs-data
     # mobicore
     export MC_AUTH_TOKEN_PATH /efs
     mkdir /efs/TEE  0770 radio system
+    chmod 0660 /dev/s5p-smem
     chmod 0660 /dev/t-base-tui
+    chown media system /dev/s5p-smem
     chown system system /dev/t-base-tui
     start mobicore
 
