--- a/ramdisk/init.samsungexynos7870.rc
+++ b/ramdisk/init.samsungexynos7870.rc
@@ -541,14 +541,14 @@ on property:wc_transport.start_hci=true
 on property:wc_transport.start_hci=false
     stop start_hci_filter
 
-service start_hci_filter /system/bin/wcnss_filter
+service start_hci_filter /vendor/bin/wcnss_filter
     class late_start
     user bluetooth
     group bluetooth
     disabled
 
 # MobiCore startup
-service wifi-daemon /system/bin/cbd -tmodap_ap -bm -mm -P platform/13540000.dwmmc0/by-name/RADIO
+service wifi-daemon /vendor/bin/cbd -tmodap_ap -bm -mm -P platform/13540000.dwmmc0/by-name/RADIO
     class main
     user root
     group radio cache inet misc audio sdcard_rw log sdcard_r shell
@@ -659,7 +659,7 @@ on property:persist.sys.storage_preload=0
     start umount_service
 
 # SSWAP
-service sswap /system/bin/sswap -s
+service sswap /vendor/bin/sswap -s
     class core
     user root
     group root
