--- a/ramdisk/init.wifi.rc
+++ b/ramdisk/init.wifi.rc
@@ -3,14 +3,12 @@
 on post-fs-data
 
     #Load Wifi Driver
-    insmod /system/lib/modules/qca_cld/qca_cld_wlan.ko
+    insmod /modules/qca_cld/qca_cld_wlan.ko
     setprop wlan.driver.status ok
 
     # give system access to wpa_supplicant.conf for backup and restore
     mkdir /data/misc/wifi 0770 wifi system
-    chmod 0660 /data/misc/wifi/wpa_supplicant.conf
     chmod 0660 /data/misc/wifi/p2p_supplicant.conf
-    chown system wifi /data/misc/wifi/wpa_supplicant.conf
     chown system wifi /data/misc/wifi/p2p_supplicant.conf
     mkdir /data/misc/wifi_share_profile 0771 wifi system
     mkdir /data/misc/wifi/sockets 0770 wifi wifi
@@ -19,12 +17,24 @@ on post-fs-data
     mkdir /data/media/wifi/log/ 0770 wifi system
     mkdir /data/misc/dhcp 0775 dhcp dhcp
     chown dhcp dhcp /data/misc/dhcp
-
+    chown wifi root /dev/rfkill
+    
+    # Create the directories used by the Wireless subsystem
+    mkdir /data/vendor/wifi 0770 wifi wifi
+    mkdir /data/vendor/wifi/sockets 0770 wifi wifi
+    mkdir /data/vendor/wifi/hostapd 0770 wifi wifi
+    mkdir /data/vendor/wifi/hostapd/ctrl 0770 wifi wifi
+    mkdir /data/vendor/wifi/wpa 0770 wifi wifi
+    
+    # copy wpa_supplicant.conf
+    copy /system/vendor/etc/wifi/wpa_supplicant.conf /data/vendor/wifi/wpa/wpa_supplicant.conf
+    chown wifi system /data/vendor/wifi/wpa/wpa_supplicant.conf
+    chmod 0660 /data/vendor/wifi/wpa/wpa_supplicant.conf
+    
     # for WIFI TRP/TIS
     mkdir /data/misc/conn 0771 system root
     chown system root /data/misc/conn/.psm.info
     chmod 0664 /data/misc/conn/.psm.info
-
 
     # for WIFI Antenna Selection
     chown system root /data/misc/conn/.ant.info
@@ -70,32 +80,21 @@ on boot
     write /sys/class/net/wlan0/queues/rx-0/rps_cpus 00
 
 service wpa_supplicant /vendor/bin/hw/wpa_supplicant \
-        -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf \
-        -I/system/vendor/etc/wifi/wpa_supplicant_overlay.conf \
-        -O/data/misc/wifi/sockets \
-        -m/data/misc/wifi/p2p_supplicant.conf \
-        -puse_p2p_group_interface=1 \
-        -e/data/misc/wifi/entropy.bin -g@android:wpa_wlan0
+    -puse_p2p_group_interface=1p2p_device=1 \
+    -O/data/vendor/wifi/wpa/sockets -puse_p2p_group_interface=1 -dd \
+    -g@android:wpa_wlan0
+    # we will start as root and wpa_supplicant will switch to user wifi
+    # after setting up the capabilities required for WEXT
+    # user wifi
+    # group wifi inet keystore
+    interface android.hardware.wifi.supplicant@1.0::ISupplicant default
+    interface android.hardware.wifi.supplicant@1.1::ISupplicant default
     class main
     socket wpa_wlan0 dgram 660 wifi wifi
     disabled
     oneshot
 
-# tiburona
-# start for WiFi MFG (TestMode)
-service mfgloader /system/bin/mfgloader
-    class main
-    disabled
-    oneshot
-
-service wlandutservice /system/bin/wlandutservice
-    class main
-    user system
-    group wifi net_raw net_admin system inet
-    disabled
-    oneshot
-
-service macloader /system/bin/macloader
+service macloader /vendor/bin/macloader
     class main
     oneshot
 
@@ -104,4 +103,3 @@ on property:init.svc.macloader=stopped
     chmod 0664 /data/misc/conn/.cid.info
     chown system root /data/.rev
     chmod 0664 /data/.rev
-# end of WiFi MFG (TestMode)
