--- a/ramdisk/init.samsung.rc
+++ b/ramdisk/init.samsung.rc
@@ -721,10 +721,10 @@ on charger
     chmod 0400 /efs/Battery/battery_data.dat
     write /sys/class/power_supply/battery/batt_update_data "/efs/Battery/battery_data.dat"
 
-service drm /system/bin/drmserver
-    class main
-    user drm
-    group drm system inet drmrpc
+#service drm /system/bin/drmserver
+#    class main
+#    user drm
+#    group drm system inet drmrpc
 
 service scs /system/bin/scs
     class main
