--- a/ramdisk/init.samsungexynos7870.rc
+++ b/ramdisk/init.samsungexynos7870.rc
@@ -548,7 +548,7 @@ on property:wc_transport.start_hci=true
 on property:wc_transport.start_hci=false
     stop start_hci_filter
 
-service start_hci_filter /system/bin/wcnss_filter
+service start_hci_filter /vendor/bin/wcnss_filter
     class late_start
     user bluetooth
     group bluetooth
@@ -664,7 +664,7 @@ on property:persist.sys.storage_preload=0
     start umount_service
 
 # SSWAP
-service sswap /system/bin/sswap -s
+service sswap /vendor/bin/sswap -s
     class core
     user root
     group root
