gtaxl: Change user/group permission for charger
Make charger binary run as system instead of root. Since it
needs to handle input key events, add input as a supplemental
group in addition to system and graphics.

Change-Id: Id1dc46f335087147b7d8cf674664c26f0b511de1

--- a/rootdir/init.samsungexynos7870.rc
+++ b/rootdir/init.samsungexynos7870.rc
@@ -193,8 +193,9 @@ service gpsd /vendor/bin/hw/gpsd -c /vendor/etc/gps.xml
 
 service charger /system/bin/charger
     class charger
+    user system
+    group system graphics input 
     capabilities SYS_BOOT
-    critical
     seclabel u:r:charger:s0
 
 # Bluetooth
