gtaxl: Add CAP_SYS_BOOT for charger
Add CAP_SYS_BOOT capability for charger service so that it can
shutdown/reboot the system.

Change-Id: I17ccba74d5a3c38bd751c55bcf42fb3689d730a7

--- a/rootdir/init.samsungexynos7870.rc
+++ b/rootdir/init.samsungexynos7870.rc
@@ -193,6 +193,7 @@ service gpsd /vendor/bin/hw/gpsd -c /vendor/etc/gps.xml
 
 service charger /system/bin/charger
     class charger
+    capabilities SYS_BOOT
     critical
     seclabel u:r:charger:s0
 
