--- a/ramdisk/init.samsung.rc
+++ b/ramdisk/init.samsung.rc
@@ -1,3 +1,4 @@
+on post-fs-data
 # [ SEC_SELINUX_PORTING_COMMON
     # for audit message
     chown system system /proc/avc_msg
@@ -186,7 +187,7 @@ on post-fs-data
     chown system system /efs/drm/h2k
 
     # icd
-    check_icd
+#    check_icd
     chown system system /dev/icd
     chmod 0644 /dev/icd
     chown system system /dev/icdr
@@ -378,7 +379,7 @@ on boot
    mkdir /efs/Battery 0775 radio system
    chown radio system /efs/Battery
    chmod 0775 /efs/Battery
-   copy /system/vendor/firmware/battery_data.dat /efs/Battery/battery_data.dat
+   copy /vendor/firmware/battery_data.dat /efs/Battery/battery_data.dat
    chmod 0400 /efs/Battery/battery_data.dat
    chown system radio /sys/class/power_supply/battery/batt_update_data
    chmod 0644 /sys/class/power_supply/battery/batt_update_data
@@ -717,7 +718,7 @@ on charger
     mkdir /efs/Battery 0775 radio system
     chown radio system /efs/Battery
     chmod 0775 /efs/Battery
-    copy /system/vendor/firmware/battery_data.dat /efs/Battery/battery_data.dat
+    copy /vendor/firmware/battery_data.dat /efs/Battery/battery_data.dat
     chmod 0400 /efs/Battery/battery_data.dat
     write /sys/class/power_supply/battery/batt_update_data "/efs/Battery/battery_data.dat"
 
@@ -745,10 +746,10 @@ service icd /system/bin/icd
     class main
     user system
     group system log
-    onrestart check_icd
+#    onrestart check_icd
     oneshot
 
 # icd
 on property:init.svc.media=restarting
-    check_icd
+#    check_icd
     start icd
