add gpsd seclabel, thanks @followmsi

--- a/ramdisk/init.samsungexynos7870.rc
+++ b/ramdisk/init.samsungexynos7870.rc
@@ -419,6 +419,7 @@ service gpsd /vendor/bin/hw/gpsd -c /vendor/etc/gps.xml
     user gps
     group system inet net_raw wakelock
     ioprio be 0
+    seclabel u:r:gpsd:s0
 
 # LPM
 service charger /charger
