turn-off sepolicy

--- a/ramdisk/init.baseband.rc
+++ b/ramdisk/init.baseband.rc
@@ -58,7 +58,7 @@ service cpboot-daemon /vendor/bin/cbd -d -tss310 -bm -mm -P platform/13540000.dw
     class main
     user root
     group radio cache inet misc audio sdcard_rw log sdcard_r shell
-    seclabel u:r:cbd:s0
+#    seclabel u:r:cbd:s0
 
 on property:ro.multisim.simslotcount=*
    write /sys/module/modem_ctrl_ss310ap/parameters/ds_detect ${ro.multisim.simslotcount}
