gtaxl-common: make use of gps_debug.conf to set xtra servers
 * Just bind mount gps.conf to gps_debug.conf
   We can't directly build gps_debug.conf because it's a common target
   and we're not allowed to override targets anymore.

 * Allow the bind mount in SEPolicy

Change-Id: Ia3c96665b50b0fe478e44186d1c65be723acbf5a

--- a/rootdir/init.samsungexynos7870.rc
+++ b/rootdir/init.samsungexynos7870.rc
@@ -39,6 +39,9 @@ on post-fs-data
     rm /data/system/gps/smd_started
     rm /data/system/gps/sv_cno.info
 
+    # GnssConfiguration doesn't actually look at gps.conf, just the debug file
+    mount none /system/etc/gps.conf /system/etc/gps_debug.conf bind
+
     setprop vold.post_fs_data_done 1
 
 on boot
