gtaxlwifi: sepolicy: improve it further.
Labeled as only for gtaxlwifi as this removes rules that are irrelevant
to gtaxlwifi, but are relevant for gtaxllte. Not that this sepolicy was
likely ever complete for gtaxllte, anyway.

--- a/rootdir/init.samsungexynos7870.rc
+++ b/rootdir/init.samsungexynos7870.rc
@@ -275,6 +275,7 @@ service start_hci_filter /vendor/bin/wcnss_filter
     class late_start
     user bluetooth
     group bluetooth
+    seclabel u:r:wcnss_filter:s0
     disabled
 
 # MobiCore startup
